--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mogoose": "^0.0.1-security",
     "mongoose": "^8.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
