--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.21",
+        "cors": "^2.8.5",
         "npx": "^10.2.2",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.1.7"
