--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,6 +10,12 @@
     {
       "src": "/(.*)",
       "dest": "index.js"
+    },
+    {
+      "rewrites": [
+        { "source": "/(.*)", "destination": "/index.html" }
+      ]
     }
+    
   ]
 }
