--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,21 @@
 {
+  "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/books/(.*)", "dest": "/api/index.js" },
-    { "src": "/api/(.*)", "dest": "/api/index.js" }
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    },
+    {
+      "rewrites": [
+        { "source": "/(.*)", "destination": "/index.html" }
+      ]
+    }
+    
   ]
 }
